--- a/Content/posts/2020-01-26-publish.md
+++ b/Content/posts/2020-01-26-publish.md
@@ -5,11 +5,7 @@ tags: Swift, Web
 excerpt: Swift community is growing and so is the variety of tools that are being created. In this blog article we'll go through the creation of a blog using a static site generator Publish.
 ---
 
-[Publish](https://github.com/JohnSundell/Publish) is a static site generator built for Swift developers.
-
-# Idea
-
-We'll be migrating a static blog generation from [Jekyll](https://jekyllrb.com) to Publish. The previous version of a blog was generated using Jekyll using a provided theme without putting too much effort in understanding the whole creation process. This time around I decided to dig deeper into understanding Publish and remembering long forgotten *HTML* and *CSS* skills. 
+[Publish](https://github.com/JohnSundell/Publish) is a static site generator built for Swift developers. We'll be migrating a static blog generation from [Jekyll](https://jekyllrb.com) to Publish. The previous version of a blog was generated using Jekyll and a provided theme without putting too much effort in understanding the whole creation process. This time I decided to dig deeper into understanding Publish and remembering long forgotten *HTML* and *CSS* skills.
 
 We'll be trying to create a similar style blog that was created using Jekyll. It should remain adaptable for bigger or smaller screen sizes:
 
@@ -22,275 +18,198 @@ We'll be trying to create a similar style blog that was created using Jekyll. It
 <img src="/images/publish/previous_2.png" alt="Previous moble version of a blog" width="300"/>
 
 # Getting Started
-After running the steps described in a [Publish repository](https://github.com/JohnSundell/Publish) we end up with a 
+After running the steps described in a [Publish repository](https://github.com/JohnSundell/Publish) we end up with a sample project that showcases the main parts and features of Publish.
 
-## Data
+In the folder structure we can see `posts` folder that contains an example post. I copy-pasted my blog posts `.md` files from old Jekyll blog to see if it works. We only need to change couple fields to make it work. The only difference is a metadata format on top of `.md` file. By removing quotes from strings, brackets from arrays and renaming categories to tags we can get Jekyll articles immediately generated into a new blog.
 
-`Struct` containing _raw data_.
+<img src="/images/publish/blog_1.png" alt="Previous desktop version of a blog" width="500"/>
+
+# Website
+
+If we open up `main.swift` file we see:
 
 ```swift
-    struct Data: Equatable {
-        let regions: [Region]
-        let trips: [Trip]
-    }
+try Blog().publish(withTheme: .foundation)
 ```
 
-## View Model
+In Publish a website is a simple Swift struct that should contain mandatory fields required by a `Website` protocol as well as any additional fields that might be needed. 
 
-`Struct` containing _State_ (loading, error, empty, loaded) and mapped data that is used by _View Controllers_ for configuring views. 
+As this blog contains personal information as well as links to social media accounts, I included them in a `Blog` structure.
+
 
 ```swift
-    struct ViewModel: FeatureViewModel {
-        let state: ViewState<Feed.ViewModel.Content>
-        let title: String
-
-        struct Content: FeatureContentViewModel, Equatable {
-            var rows: [FeedCardViewModel]
-            let availableRegions: [Feed.ViewModel.Content.Region]
-            let selectedRegion: Feed.ViewModel.Content.Region?
-
-            struct Region: Equatable {
-                let id: String
-                let name: String
-            }
-
-            var hasContent: Bool {
-                return !rows.isEmpty
-            }
-        }
+struct Blog: Website {
+    enum SectionID: String, WebsiteSectionID {
+        case posts
+        case about
     }
+
+    struct ItemMetadata: WebsiteItemMetadata {
+    	// Additional field in post .md metadata
+        var excerpt: String
+    }
+
+    var url = URL(string: "https://www.staskus.io")!
+    var title = "staskus.io"
+    var name = "Povilas Staškus"
+    var description = "iOS Developer"
+    var language: Language { .english }
+    var imagePath: Path? { nil }
+    var socialMediaLinks: [SocialMediaLink] { [.location, .email, .linkedIn, .github, .twitter] }
+}
 ```
 
-## Action
+# Theme
 
-`Enum` with actions that _View Controller_ can do and _Interactor_ can handle. 
+Basic `foundation` theme is used after generating a website for the first time. However, it's only there to give an example of how custom site theme should be created.
 
-```swift
-    enum Action {
-        case load
-        case changeRegion(regionId: String?)
-    }
-```
+A `Theme` is built by conforming to `HTMLFactory` protocol.
 
-## Route
-
-`Enum` with destinations that _View Controller_ can route to. 
+Not all the pages are needed to be created for your site to be fully functioning. For a blog we must have: 1) an index page, that shows header, sidebar and list of posts. 2) item page, that will show full post.
 
 ```swift
-    enum Route: Equatable {
-        case book(Trip)
-    }
-```
+class BlogHTMLFactory: HTMLFactory {
 
-# Components 
-
-## Interactor
-
-Receives an action, performs work and sends raw data to presenter.
-
-* Input - _Action_
-* Output - _Data_
-* Uses - _Presenter_
-
-## Presenter
-
-Receives raw data and maps it into _View Model_
-
-* Input - _Data_
-* Output - _View Model_
-
-## View Controller
-
-Receives _View Model_ and configures a view according to it. Sends actions to _Interactor_.
-
-* Input - _View Model_
-* Output - _Action_
-* Uses - _Interactor_, _Router_
-
-## Router
-
-Receives _Route_ object from _View Controller_, that contains information about next destination, and opens next _View Controller_ using _Configurator_
-
-* Input - _Route_
-* Uses  - _Configurator_
-
-## Configurator
-
-Takes an input and creates configured _View Controller_ with other components.
-
-* Input - Optional configuration data.
-* Output - _View Controller_
-* Creates  - _Interactor_, _Presenter_, _View Controller_, _Router_
-
-
-# Feature
-
-The group of these components is called `Feature`. [Clean Swift](https://clean-swift.com) provides with XCode templates that allow to generate all of these components together. We are using [plop templates](https://github.com/nitesuit/aerogami-ios/tree/master/templates/plop/Feature) for feature generation. All of this allows to avoid writing boilerplate code and concentrate on actual code of the feature.
-
-# Feed Example
-
-`Feed` is a main [feature](https://github.com/nitesuit/aerogami-ios/tree/master/TravelFeatureKit/Features/Feed) of the application. We're going to see how all of these different components is used to create a complete feature.
-
-## Feed Interactor
-
-`Feed Interactor` uses repositories of _Region_, _Trip_ and _Airport_ for loading data. 
-
-`dispatch` function is an entry point of any `Interactor`. 
-
-```swift
-    func dispatch(_ action: Feed.Action) {
-        switch action {
-        case .load:
-            contentState = .loading(data: contentState.data)
-            load()
-        case .changeRegion(let regionId):
-            changeRegion(id: regionId)
-        }
-    }
-```
-
-We can see when `FeedInteractor` receives _load_ action it sets current state to _loading_ and calls `load()` method. It combines `RegionRepository` and `TripRepository`, maps it to _Data_ object and passes it to `FeedPresenter` by setting _contentState_.
-
-```swift
-    func load() {
-        let selectedRegion = regionRepository.getSelectedRegion()
-
-        Observable.combineLatest(
-            self.regionRepository.getRegions(),
-            self.tripRepository.getTrips(in: selectedRegion?.id)
-            )
-            .map { (regions, trips) -> Feed.Data in
-                return Feed.Data(
-                    regions: regions,
-                    trips: trips,
-                    selectedRegionId: selectedRegion?.id,
-                    tripImages: []
-                )
-            }
-            .subscribe(
-                onNext: { data in
-                    self.contentState = .loaded(data: data, error: nil)
-                    self.loadImages(for: data.trips)
-                },
-                onError: { error in
-                    self.contentState = .error(error: .loading(reason: R.string.localizable.errorGenericTitle()))
-                }
-            )
-            .disposed(by: disposeBag)
-    }
-```
-
-## Feed Presenter
-
-[Feed Presenter](https://github.com/nitesuit/aerogami-ios/blob/master/TravelFeatureKit/Features/Feed/FeedPresenter.swift) essentially takes `Feed.Data` and returns `Feed.ViewModel`.
-
-```swift
-    func makeContentViewModel(content: Feed.Data) throws -> Feed.ViewModel.Content {
-        return Feed.ViewModel.Content(
-            rows: makeFeedCardRows(content),
-            availableRegions: makeAvailableRegions(content),
-            selectedRegion: makeSelectedRegion(content)
-        )
-    }
-```
-
-We can see that _struct_ such as `FeedCardViewModel` is fairly complicated and comprehensively describes for a table view row what needs to be displayed. It ensures that there is absolutely no business logic, mapping or formatting done in a view as it's simply sets these properties to appropriate variables. 
-
-```swift
-    private func makeFeedCardRows(_ content: Feed.Data) -> [FeedCardViewModel] {
-        return getSortedTrips(content).map { trip in
-            currencyFormatter.currencyCode = trip.currency
-            return FeedCardViewModel(
-                direction: R.string.localizable.feedBothWaysTitle(),
-                trip: makeTripString(trip),
-                price: formatCurrency(trip),
-                dateRange: dateRange(trip),
-                routeName: R.string.localizable.feedBookTitle(),
-                imageUrl: makeTripImageURL(trip, content: content),
-                route: Feed.Route.book(trip),
-                isExpired: trip.expiresAt <= Date()
-            )
-        }
-    }
-```
-
-## Feed View Controller
-
-View Controller in this architecture is a very lean and clean class. It does what view _should_ do: present data, handle user actions and delegate these actions to 'interactor'. 
-
-_display()_ lets `FeedViewController` know that the state and `Feed.ViewModel` was updated. Different views then can use parts of view model to configure themselves.
-
-```swift
-    func display() {
-        guard let viewModel = viewModel?.state.viewModel else { return }
-
-        tableView.reloadData()
-        headerView.configure(with: viewModel.selectedRegion)
-    }
-```
-
-`Feed.Action` is sent to `Feed.Interactor` when anything meaningful happens in `FeedViewController.` For example, loading data when view appears.
-
-```swift
-    override func viewWillAppear(_ animated: Bool) {
-        super.viewWillAppear(animated)
-
-        interactor.subscribe()
-        interactor.dispatch(Feed.Action.load)
-    }
-```
-
-`Feed.Route` is sent to `Feed.Router` when `FeedViewController` wants to transition to other view controller.
-
-```swift
-    func tableView(_ tableView: UITableView, didSelectRowAt indexPath: IndexPath) {
-        guard let cellViewModel = viewModel?.state.viewModel?.rows[indexPath.row] else { return }
-
-        router.route(to: cellViewModel.route)
-    }
-```
-
-## Feed Router
-
-`FeedRouter` handles _route_ actions and opens other view controllers. It uses `BookTripConfigurator` for building `BookTripViewController`. 
-
-```swift
-class FeedRouter {
-
-    private let bookTripConfigurator: BookTripConfigurator
-
-    weak var viewController: FeedViewController?
-
-    init(bookTripConfigurator: BookTripConfigurator) {
-        self.bookTripConfigurator = bookTripConfigurator
+    func makeIndexHTML(for index: Index,
+                       context: PublishingContext<Blog>) throws -> HTML {
+    	// Returning HTML of an Index Page
     }
 
-    func route(to route: Feed.Route) {
-        switch route {
-        case .book(let trip):
-            let bookTripViewController = bookTripConfigurator.createViewController(trip: trip)
-            bookTripViewController.modalPresentationStyle = .overCurrentContext
-            bookTripViewController.modalTransitionStyle = .coverVertical
-            viewController?.tabBarController?.present(bookTripViewController, animated: true, completion: nil)
-        }
+    func makeSectionHTML(for section: Section<Site>,
+                         context: PublishingContext<Blog>) throws -> HTML {
+    	// Returning HTML of a Section Index Page that displays section items
+    }
+
+    func makeItemHTML(for item: Item<Site>,
+                      context: PublishingContext<Blog>) throws -> HTML {
+    	// Returning HTML of a Post Page
+    }
+
+    func makePageHTML(for page: Page,
+                      context: PublishingContext<Blog>) throws -> HTML {
+    	// Returning HTML of a Section Page 
+    }
+
+    func makeTagListHTML(for page: TagListPage,
+                         context: PublishingContext<Blog>) throws -> HTML? {
+    	// Returning HTML of a Page with list of available tags
+    }
+
+    func makeTagDetailsHTML(for page: TagDetailsPage,
+                            context: PublishingContext<Blog>) throws -> HTML? {
+    	// Returning HTML of a Page for a specific tag
     }
 }
 ```
 
-## Usage
+Although we can write `HTML` code using Swift, the styling of the site is done using `CSS.` For the creation of this blog, I decided to use [Pure.css](https://purecss.io). The desired blog theme is quite minimalist and the features that [Pure.css](https://purecss.io) provides seem more than enough to achieve what we want. Even after many years without any `CSS` and `HTML` experience it was possible to make pretty decent layout. For the rest of this article, we won't be focusing on that. The code can be found on [GitHub](https://github.com/nitesuit/Blog) for those who are interested.
 
-For understanding this flow easier we can imagine a hypothetical scenario of `Feed` feature.
+# Index Page
 
-1. AppDelegate uses `FeedConfigurator` and calls `createViewController()` to create `FeedViewController`
-2. `FeedViewController` on `viewWillAppear` calls `interactor.dispatch(Feed.Action.load)` to trigger `load` action
-3. `FeedInteractor` handles `load` action and uses `TripRepository` to load an array of `Trips` from the backend. It passes an array of `Trips` to `FeedPresenter`.
-4. `FeedPresenter` takes an array of `Trips` and maps it to `FeedViewModel` by formatting and localizing text, loading images and splitting it into fields that view needs to know about.
-5. `FeedViewController`'s method  `display()` is triggered and table view is loaded with new data.
+`makeIndexHTML` builds HTML of an index page. The structure is the same as writing plain HTML tags. We set *language*, *head* and then structure layout inside *body*.
 
-Although this all may seem too much at first, it actually provides developers with huge clarity when building and maintaining the project. Moreover, all these different components have clear inputs and outputs than can be unit tested. With the growing complexity of the feature it becomes convenient to simply check `Action` to see all the different things that `ViewController` does or analyse `Presenter` to understand what kind of data is actually presented.
+Body uses `.grid` node that creates Pure.css grid in which we can structure our layout. We have `.header`, `.sidebar`, `.posts` and `.footer` that are put one after the other. 
 
-## Result
+```swift
+class BlogHTMLFactory: HTMLFactory {
 
-In these series we've seen how to build iOS application by separating it into different frameworks, loading data from API and mapping it using `Codable`, sketching UIs following Apple's guidelines and develop it all on top of _Clean_ architecture. All of these steps allow the app to be scalable, maintainable and testable.  
+    func makeIndexHTML(for index: Index,
+                       context: PublishingContext<Blog>) throws -> HTML {
+    	HTML(
+            .lang(context.site.language),
+            .head(for: context.site),
+            .body(
+                .grid(
+                    .header(for: context.site),
+                    .sidebar(for: context.site),
+                    .posts(
+                        for: context.allItems(
+                            sortedBy: \.date,
+                            order: .descending
+                        ),
+                        on: context.site,
+                        title: "Recent posts"
+                    ),
+                    .footer(for: context.site)
+                )
+            )
+        )
+    }
+}
+```
+Any node can be written as a `static` func extension of a `Node`. `Context == HTML.BodyContext` indicate that this node can be only used inside *body*. It's a nice and clean way to declare new nodes, as they can be then used using dot syntax.
 
-<img src="/images/aerogami-tutorial/part5/app_demo.gif" alt="App Demo" width="300"/>
+```swift
+extension Node where Context == HTML.BodyContext {
+    static func grid(_ nodes: Node...) -> Node {
+        .div(
+            .id("layout"),
+            .class("pure-g"),
+            .group(nodes)
+        )
+    }
+}
+```
+
+# Post
+
+A post can be declared the same way as any other node. On the top, we show the title of the post. Below, we show date. We can use any powerful features that Swift infrastructure provides us. In this instance, we use `DateFormatter` to format a date. In a similar way any more complex or sophisticated logic could be used inside this code. 
+
+```swift
+extension Node where Context == HTML.BodyContext {
+    static func post(for item: Item<Blog>, on site: Blog) -> Node {
+        return .pageContent(
+            .h2(
+                .class("post-title"),
+                .a(
+                    .href(item.path),
+                    .text(item.title)
+                )
+            ),
+            .p(
+                .class("post-meta"),
+                .text(DateFormatter.blog.string(from: item.date))
+            ),
+            .tagList(for: item, on: site),
+            .div(
+                .class("post-description"),
+                .div(
+                    .contentBody(item.body)
+                )
+            )
+        )
+    }
+}
+```
+
+# Generating the site
+
+We've seen how by creating nodes we can step by step create pages for our blog. However, I would argue that the biggest power of Publish comes from `plugins` and additional building steps that we can create or use.
+
+[Splash](https://github.com/JohnSundell/Splash) is a Swift syntax highlighter for blogs that has a plugin built for Publish. During the blog generation process, this plugin uses markdown parser to identify code inside `.md` files and apply syntax highlighting. 
+
+We can use or build any steps that might do additional checks, append necessary information or simply tweak a site in any way needed. 
+
+```swift
+import SplashPublishPlugin
+
+try Blog().publish(
+    withTheme: .blog,
+    additionalSteps: [.deploy(using: .gitHub("nitesuit/nitesuit.github.io"))],
+    plugins: [.splash(withClassPrefix: "")]
+)
+```
+
+# Result
+
+Publish worked seamlessly in this website creation process and provided all the convenience of Swift strong type system. Using well-known technology helped stay focused while trying to figure out not so familiar layout and styling techniques. Now that all the parts of the site are well understood, Publish together with Swift gives a lot of power for future improvements.
+
+The code of the blog can be found on [GitHub](https://github.com/nitesuit/Blog).
+
+#### New desktop version
+
+<img src="/images/publish/blog_new_2.png" alt="New desktop version of a blog" width="500"/>
+
+#### New mobile version
+
+<img src="/images/publish/blog_new_2.png" alt="New mobile version of a blog" width="300"/>
