Migrating from Jekyll to Publish: A site generator for Swift developers

--- a/Content/posts/2020-01-26-publish.md
+++ b/Content/posts/2020-01-26-publish.md
@@ -202,7 +202,7 @@ try Blog().publish(
 
 # Result
 
-Publish worked seamlessly in this website creation process and provided all the convenience of Swift strong type system. Using well-known technology helped stay focused while trying to figure out not so familiar layout and styling techniques. Now that all the parts of the site are well understood, Publish together with Swift gives a lot of power for future improvements.
+Publish worked seamlessly during development process. It provided all the convenience of Swift strong type system and helped stay focused while trying to figure unfamiliar web develpment workfows. Although Publish still misses many features that established static site generators have, it serves perfectly for its indeded audience - Swift developers.   Now that all the parts of the site are well understood, Publish together with Swift gives a lot of power for future improvements.
 
 The code of the blog can be found on [GitHub](https://github.com/nitesuit/Blog).
 
