Fixes in the article Migrating from Jekyll to Publish

--- a/Content/posts/2020-01-26-publish.md
+++ b/Content/posts/2020-01-26-publish.md
@@ -15,7 +15,7 @@ We'll be trying to create a similar style blog that was created using Jekyll. It
 
 #### Previous mobile version
 
-<img src="/images/publish/previous_2.png" alt="Previous moble version of a blog" width="300"/>
+<img src="/images/publish/previous_2.png" alt="Previous mobile version of a blog" width="300"/>
 
 # Getting Started
 After running the steps described in a [Publish repository](https://github.com/JohnSundell/Publish) we end up with a sample project that showcases the main parts and features of Publish.
@@ -104,7 +104,7 @@ class BlogHTMLFactory: HTMLFactory {
 
 Although we can write `HTML` code using Swift, the styling of the site is done using `CSS.` For the creation of this blog, I decided to use [Pure.css](https://purecss.io). The desired blog theme is quite minimalist and the features that [Pure.css](https://purecss.io) provides seem more than enough to achieve what we want. Even after many years without any `CSS` and `HTML` experience it was possible to make pretty decent layout. For the rest of this article, we won't be focusing on that. The code can be found on [GitHub](https://github.com/nitesuit/Blog) for those who are interested.
 
-# Index Page
+## Index Page
 
 `makeIndexHTML` builds HTML of an index page. The structure is the same as writing plain HTML tags. We set *language*, *head* and then structure layout inside *body*.
 
@@ -151,7 +151,7 @@ extension Node where Context == HTML.BodyContext {
 }
 ```
 
-# Post
+## Post
 
 A post can be declared the same way as any other node. On the top, we show the title of the post. Below, we show date. We can use any powerful features that Swift infrastructure provides us. In this instance, we use `DateFormatter` to format a date. In a similar way any more complex or sophisticated logic could be used inside this code. 
 
@@ -182,6 +182,20 @@ extension Node where Context == HTML.BodyContext {
 }
 ```
 
+## Finishing the theme
+
+We can make our theme accessible by creating `Theme` object and passing our `BlogHTMLFactory`. Declaring it as a *static var* inside an extension allows reaching it more conveniently.
+
+```swift
+extension Theme where Site == Blog {
+    static var blog: Self {
+        Theme(htmlFactory: BlogHTMLFactory())
+    }
+}
+```
+
+
+
 # Generating the site
 
 We've seen how by creating nodes we can step by step create pages for our blog. However, I would argue that the biggest power of Publish comes from `plugins` and additional building steps that we can create or use.
@@ -202,7 +216,7 @@ try Blog().publish(
 
 # Result
 
-Publish worked seamlessly during development process. It provided all the convenience of Swift strong type system and helped stay focused while trying to figure unfamiliar web develpment workfows. Although Publish still misses many features that established static site generators have, it serves perfectly for its indeded audience - Swift developers.   Now that all the parts of the site are well understood, Publish together with Swift gives a lot of power for future improvements.
+Publish worked seamlessly during development process. It provided all the convenience of Swift strong type system and helped stay focused while trying to figure unfamiliar web development workflows. Although Publish still misses many features that established static site generators have, it serves perfectly for its intended audience - Swift developers.   Now that all the parts of the site are well understood, Publish together with Swift gives a lot of power for future improvements.
 
 The code of the blog can be found on [GitHub](https://github.com/nitesuit/Blog).
 
