Updating blog content

--- a/Content/posts/2020-01-26-publish.md
+++ b/Content/posts/2020-01-26-publish.md
@@ -102,7 +102,7 @@ class BlogHTMLFactory: HTMLFactory {
 }
 ```
 
-Although we can write `HTML` code using Swift, the styling of the site is done using `CSS.` For the creation of this blog, I decided to use [Pure.css](https://purecss.io). The desired blog theme is quite minimalist and the features that [Pure.css](https://purecss.io) provides seem more than enough to achieve what we want. Even after many years without any `CSS` and `HTML` experience it was possible to make pretty decent layout. For the rest of this article, we won't be focusing on that. The code can be found on [GitHub](https://github.com/nitesuit/Blog) for those who are interested.
+Although we can write `HTML` code using Swift, the styling of the site is done using `CSS.` For the creation of this blog, I decided to use [Pure.css](https://purecss.io). The desired blog theme is quite minimalist and the features that [Pure.css](https://purecss.io) provides seem more than enough to achieve what we want. Even after many years without any `CSS` and `HTML` experience it was possible to make pretty decent layout. For the rest of this article, we won't be focusing on that. The code can be found on [GitHub](https://github.com/staskus/Blog) for those who are interested.
 
 ## Index Page
 
@@ -209,7 +209,7 @@ import SplashPublishPlugin
 
 try Blog().publish(
     withTheme: .blog,
-    additionalSteps: [.deploy(using: .gitHub("nitesuit/nitesuit.github.io"))],
+    additionalSteps: [.deploy(using: .gitHub("staskus/nitesuit.github.io"))],
     plugins: [.splash(withClassPrefix: "")]
 )
 ```
@@ -218,7 +218,7 @@ try Blog().publish(
 
 Publish worked seamlessly during development process. It provided all the convenience of Swift strong type system and helped stay focused while trying to figure unfamiliar web development workflows. Although Publish still misses many features that established static site generators have, it serves perfectly for its intended audience - Swift developers.   Now that all the parts of the site are well understood, Publish together with Swift gives a lot of power for future improvements.
 
-The code of the blog can be found on [GitHub](https://github.com/nitesuit/Blog).
+The code of the blog can be found on [GitHub](https://github.com/staskus/Blog).
 
 #### New desktop version
 
