Updating blog content

--- a/Content/notes/2023.md
+++ b/Content/notes/2023.md
@@ -8,8 +8,10 @@ excerpt: Internet findings
 
 > 1. Everyone is the main character in their own story.
 This manifest in all sorts of ways - from people not being there when you need them the most, from friends dying off as soon as proximity changes, to how and why get people get promoted in jobs. This isn't necessarily bad, but if you don't know how to navigate this it can be quite painful and confusing.
+>
 > 2. Representation matters.
 I knew this for a long time, but it didn't fully click until years had gone by and I realized I had unconsciously held myself back from pursuing a wide range of things because I just didn't see anyone like me there.
+>
 > 3. Rules in life are just constructs that we as humans have created. Starting a business helped the most on this one. That's when I started to see that "rules" or "procedure" are all made up and exceptions can always be made.
-> 
-> --- fortituded0002
+>
+> --- fortituded0002"
