Updating blog content

--- a/Content/posts/2020-01-26-publish.md
+++ b/Content/posts/2020-01-26-publish.md
@@ -17,14 +17,14 @@ We'll be trying to create a similar style blog that was created using Jekyll. It
 
 <img src="/images/publish/previous_2.png" alt="Previous mobile version of a blog" width="300"/>
 
-# Getting Started
+## Getting Started
 After running the steps described in a [Publish repository](https://github.com/JohnSundell/Publish) we end up with a sample project that showcases the main parts and features of Publish.
 
 In the folder structure we can see `posts` folder that contains an example post. I copy-pasted my blog posts `.md` files from old Jekyll blog to see if it works. We only need to change couple fields to make it work. The only difference is a metadata format on top of `.md` file. By removing quotes from strings, brackets from arrays and renaming categories to tags we can get Jekyll articles immediately generated into a new blog.
 
 <img src="/images/publish/blog_1.png" alt="Previous desktop version of a blog" width="500"/>
 
-# Website
+## Website
 
 If we open up `main.swift` file we see:
 
@@ -59,7 +59,7 @@ struct Blog: Website {
 }
 ```
 
-# Theme
+## Theme
 
 Basic `foundation` theme is used after generating a website for the first time. However, it's only there to give an example of how custom site theme should be created.
 
@@ -104,7 +104,7 @@ class BlogHTMLFactory: HTMLFactory {
 
 Although we can write `HTML` code using Swift, the styling of the site is done using `CSS.` For the creation of this blog, I decided to use [Pure.css](https://purecss.io). The desired blog theme is quite minimalist and the features that [Pure.css](https://purecss.io) provides seem more than enough to achieve what we want. Even after many years without any `CSS` and `HTML` experience it was possible to make pretty decent layout. For the rest of this article, we won't be focusing on that. The code can be found on [GitHub](https://github.com/staskus/Blog) for those who are interested.
 
-## Index Page
+### Index Page
 
 `makeIndexHTML` builds HTML of an index page. The structure is the same as writing plain HTML tags. We set *language*, *head* and then structure layout inside *body*.
 
@@ -151,7 +151,7 @@ extension Node where Context == HTML.BodyContext {
 }
 ```
 
-## Post
+### Post
 
 A post can be declared the same way as any other node. On the top, we show the title of the post. Below, we show date. We can use any powerful features that Swift infrastructure provides us. In this instance, we use `DateFormatter` to format a date. In a similar way any more complex or sophisticated logic could be used inside this code. 
 
@@ -182,7 +182,7 @@ extension Node where Context == HTML.BodyContext {
 }
 ```
 
-## Finishing the theme
+### Finishing the theme
 
 We can make our theme accessible by creating `Theme` object and passing our `BlogHTMLFactory`. Declaring it as a *static var* inside an extension allows reaching it more conveniently.
 
@@ -196,7 +196,7 @@ extension Theme where Site == Blog {
 
 
 
-# Generating the site
+## Generating the site
 
 We've seen how by creating nodes we can step by step create pages for our blog. However, I would argue that the biggest power of Publish comes from `plugins` and additional building steps that we can create or use.
 
@@ -214,7 +214,7 @@ try Blog().publish(
 )
 ```
 
-# Result
+## Result
 
 Publish worked seamlessly during development process. It provided all the convenience of Swift strong type system and helped stay focused while trying to figure unfamiliar web development workflows. Although Publish still misses many features that established static site generators have, it serves perfectly for its intended audience - Swift developers.   Now that all the parts of the site are well understood, Publish together with Swift gives a lot of power for future improvements.
 
