--- a/Content/posts/2020-06-23-app-clip.md
+++ b/Content/posts/2020-06-23-app-clip.md
@@ -15,11 +15,11 @@ It looks like a great move forward in reducing friction and getting an app into 
 
 We'll take a look at the initial steps of how these App Clips could be implemented and introduced in the project.
 
-# Prerequisites
+## Prerequisites
 
 Xcode 12 or higher.
 
-# Getting Started
+## Getting Started
 
 We start by creating a new project and selecting the creation of a new target.
 
@@ -29,7 +29,7 @@ We select a new App Clip target and add it to our application.
 
 <img src="/images/app-clip/new_target_app_clip.png" alt="App Clip New Target" width="600"/>
 
-# Add Associated Domain
+## Add Associated Domain
 
 We need to provide an associated domain for both App and App Clip targets. If App is not installed the link will open App Clip. Otherwise full App will be opened instead.
 
@@ -41,7 +41,7 @@ Next, we enter our associated domain value which must follow pattern of _appclip
 
 <img src="/images/app-clip/associated_domains_example.png" alt="Associated Domains Example" width="600"/>
 
-# Running App Clip target
+## Running App Clip target
 
 App Clip target can be run and debugged just like an App target.
 
@@ -57,7 +57,7 @@ struct ContentView: View {
 
 <img src="/images/app-clip/hello_app_clip.png" alt="Hello App Clip Simulator Screen" width="300"/>
 
-# Configuring App Clip
+## Configuring App Clip
 
 App Clip is invoked via URL which can contain context-related information and be used in the configuration.
 
@@ -110,7 +110,7 @@ struct AppClipSneakPeekClipApp: App {
 }
 ```
 
-# Testing
+## Testing
 
 Launching AppClip target now does not show any name value. It makes sense as we didn't pass any URL with parameters to our app.
 
@@ -122,11 +122,11 @@ If we launch the application now, the value is received through lifecycle event 
 
 <img src="/images/app-clip/testing_success.png" alt="iOS Simulator with result" width="300"/>
 
-## What about App Clip Card?
+### What about App Clip Card?
 
 App Clip Card itself that is shown with a suggestion to open an App Card is not developed through Xcode. The information displayed in this card can be configured through [App Store Connect](https://appstoreconnect.apple.com/login). Developers will be able to change a header image, subtitle, and title on the action button.
 
-# Where do we go from here?
+## Where do we go from here?
 
 App Clip looks like a promising addition to the ecosystem and it will be interesting to see how it will be used and adopted by both developers and users.
 
